option java_package = "tajo";
option java_outer_classname = "TajoProtos";
option java_generic_services = false;
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";

enum StatType {
  TABLE_NUM_ROWS = 0;
  TABLE_NUM_BLOCKS = 1;
  TABLE_NUM_PARTITIONS = 2;
  TABLE_AVG_ROWS = 3;
  TABLE_NUM_BYTES = 4;

  COLUMN_NUM_NDV = 4;
  COLUMN_NUM_NULLS = 5;
}

message StatSetProto {
    repeated StatProto stats = 1;
}

message StatProto {
    required StatType type = 1;
    required int64 value = 2;
}

message QueryIdProto {
    required ApplicationIdProto app_id = 1;
    required int32 id = 2;
}

message SubQueryIdProto {
    required QueryIdProto queryId = 1;
    required int32 id = 2;
}

message QueryUnitAttemptIdProto {
    required QueryUnitIdProto queryUnitId = 1;
    required int32 id = 2;
}

message QueryUnitIdProto {
    required SubQueryIdProto subQueryId = 1;
    required int32 id = 2;
}

message ServerNameProto {
    required string serverName = 1;
    required string hostName = 2;
    required int32 port = 3;
}

enum QueryState {
  QUERY_NEW = 0;
  QUERY_INIT = 1;
  QUERY_RUNNING = 2;
  QUERY_SUCCEEDED = 3;
  QUERY_FAILED = 4;
  QUERY_KILLED = 5;
  QUERY_INTERNAL_ERROR = 6;
}

enum TaskAttemptState {
  TA_NEW = 0;
  TA_UNASSIGNED = 1;
  TA_ASSIGNED = 2;
  TA_PENDING = 3;
  TA_RUNNING = 4;
  TA_SUCCEEDED = 5;
  TA_FAILED = 6;
  TA_KILLED = 7;
}
